Statische Codeanalyse mit Findbugs Vorbereitung kompakte Abbuchung